--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Damaris Fonseca, TJSC, tecnologia, natureza, viagens">
     <title>Minha Página Pessoal</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="imagens/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="Imagens/favicon.ico">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
                     <li>Viajar</li>
                 </ul>
                 
-                <img src="imagens/hobby.jpg" alt="Imagem representando hobbies e atividades de lazer" class="hobby-img">
+                <img src="Imagens/hobby.jpg" alt="Imagem representando hobbies e atividades de lazer" class="hobby-img">
             </section>
             
             <section>
@@ -44,15 +44,15 @@
                     </tr>
                     <tr>
                         <td>Dinamarca - Copenhague</td>
-                        <td><img src="imagens/pais1.jpg" alt="Vista panorâmica de Copenhague, Dinamarca" class="pais-img"></td>
+                        <td><img src="Imagens/pais1.jpg" alt="Vista panorâmica de Copenhague, Dinamarca" class="pais-img"></td>
                     </tr>
                     <tr>
                         <td>Tailândia - Koh Phi Phi</td>
-                        <td><img src="imagens/pais2.jpg" alt="Praia paradisíaca de Koh Phi Phi, Tailândia" class="pais-img"></td>
+                        <td><img src="Imagens/pais2.jpg" alt="Praia paradisíaca de Koh Phi Phi, Tailândia" class="pais-img"></td>
                     </tr>
                     <tr>
                         <td>Suíça - Genebra</td>
-                        <td><img src="imagens/pais3.jpg" alt="Panorama da cidade de Genebra, Suíça" class="pais-img"></td>
+                        <td><img src="Imagens/pais3.jpg" alt="Panorama da cidade de Genebra, Suíça" class="pais-img"></td>
                     </tr>
                 </table>
             </section>
